# autotools_learn_demo

./: readme.md
demo1/: configure.ac  readme.md
demo2/: Makefile.am  compile.sh  configure.ac
demo2/char_device/: Makefile.am
demo3/: Makefile.am  compile.sh  configure.ac  readme.md
demo3/block_device/: Makefile.am
demo3/main/: Makefile.am
exer1/: Makefile.am  main.cpp
exer3/main/: main.cpp
